--- a/app/src/main/res/layout/activity_viewedit.xml
+++ b/app/src/main/res/layout/activity_viewedit.xml
@@ -19,7 +19,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageButton
-
             android:id="@+id/view_back_btn"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="60dp"
@@ -27,34 +26,51 @@
             android:layout_alignParentStart="true"
             android:padding="10dp"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/left_48px"
+            app:srcCompat="@drawable/back_page_36px"
             tools:ignore="SpeakableTextPresentCheck" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/view_back_btn"
             android:gravity="center"
-            android:text="back"
+            android:text="View Item"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-
-        <Button
-            android:id="@+id/edit_btn"
-            style="@style/Widget.AppCompat.Button.Borderless"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:drawableEnd="@drawable/edit_28px"
-            android:drawablePadding="15dp"
+            android:layout_toStartOf="@id/edit_btn"
+            android:gravity="center"
             android:text="Edit"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/edit_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:padding="11dp"
+            android:layout_alignParentEnd="true"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/pencil_edit"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+<!--        <Button-->
+<!--            style="@style/Widget.AppCompat.Button.Borderless"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:drawableEnd="@drawable/edit_28px"-->
+<!--            android:drawablePadding="15dp"-->
+<!--            android:text="@string/edit"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="18sp"-->
+<!--            android:textStyle="bold" />-->
 
     </RelativeLayout>
 
@@ -73,7 +89,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="5dp">
 
                 <androidx.cardview.widget.CardView
@@ -91,7 +107,8 @@
                         android:layout_gravity="center"
                         android:background="@color/white"
                         android:scaleType="centerCrop"
-                        app:srcCompat="@drawable/image_100px" />
+                        app:srcCompat="@drawable/no_productimage"
+                        tools:ignore="ContentDescription" />
                 </androidx.cardview.widget.CardView>
                 <!--                android:scaleType="fitCenter"-->
 
@@ -105,23 +122,25 @@
 
                     <Button
                         android:id="@+id/gallery_btn2"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/gr1_start"
-                        android:drawableRight="@drawable/photo_gallery_26px"
-                        android:text="+"
-                        android:textSize="25sp" />
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="65dp"
+                        android:layout_height="50dp"
+                        android:drawableEnd="@drawable/image_gallery_24px"
+                        android:drawablePadding="5dp"
+                        android:text="@string/plus_sign"
+                        android:textColor="@color/primary_col"
+                        android:textSize="18sp" />
 
                     <Button
                         android:id="@+id/camera_btn2"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/gr1_end"
-                        android:drawableRight="@drawable/camera_26px"
-                        android:text="+"
-                        android:textSize="25sp" />
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="65dp"
+                        android:layout_height="50dp"
+                        android:drawableEnd="@drawable/camera_24px"
+                        android:drawablePadding="5dp"
+                        android:text="@string/plus_sign"
+                        android:textColor="@color/temp1"
+                        android:textSize="18sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -137,16 +156,34 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="60dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Item:"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/item"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/required1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="12dp"
+                            android:text="@string/required"
+                            android:textColor="@color/primary_col"
+                            android:textSize="12sp"
+                            android:textStyle="bold|italic"
+                            tools:ignore="RtlSymmetry" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <EditText
                         android:id="@+id/itemname_val2"
@@ -157,7 +194,7 @@
                         android:layout_marginBottom="10dp"
                         android:autofillHints="name"
                         android:background="@drawable/edittext_round"
-                        android:hint="Item Name"
+                        android:hint="@string/item_name"
                         android:inputType="text|textNoSuggestions"
 
                         android:lineHeight="5dp"
@@ -195,7 +232,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="60dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Barcode:"
+                        android:text="@string/barcode"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -214,7 +251,7 @@
                             android:layout_marginBottom="10dp"
                             android:layout_weight="2"
                             android:background="@drawable/edittext_round"
-                            android:hint="Barcode"
+                            android:hint="@string/barcode"
                             android:importantForAutofill="no"
                             android:inputType="text|textNoSuggestions"
                             android:lineHeight="5dp"
@@ -230,7 +267,7 @@
                             android:textStyle="bold"
                             tools:targetApi="p" />
 
-                        <ImageButton
+                        <androidx.appcompat.widget.AppCompatImageButton
                             android:id="@+id/barscan_btn2"
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="match_parent"
@@ -238,9 +275,8 @@
                             android:layout_marginEnd="40dp"
                             android:layout_marginBottom="10dp"
                             android:layout_weight="6"
-                            android:scaleType="centerInside"
-                            app:srcCompat="@drawable/barcode_32px"
-                            tools:ignore="SpeakableTextPresentCheck" />
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/scan_icon" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -265,7 +301,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="60dp"
                     android:layout_marginBottom="10dp"
-                    android:text="Description:"
+                    android:text="@string/description"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
@@ -277,7 +313,7 @@
                     android:layout_marginEnd="40dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/edittext_round"
-                    android:hint="Description"
+                    android:hint="@string/description"
 
                     android:importantForAutofill="no"
                     android:inputType="text|textNoSuggestions"
@@ -308,32 +344,49 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="60dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Quantity:"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/quantity"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/required2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="12dp"
+                            android:text="@string/required"
+                            android:textColor="@color/primary_col"
+                            android:textSize="12sp"
+                            android:textStyle="bold|italic" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <EditText
                         android:id="@+id/quantity_val2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="40dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="15dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/edittext_round"
-                        android:hint="Quantity"
+                        android:hint="@string/quantity"
+                        android:importantForAutofill="no"
                         android:inputType="numberSigned"
                         android:lineHeight="5dp"
                         android:maxWidth="@dimen/maxwidth_edittext"
                         android:maxLength="5"
-                        android:maxLines="1"
 
+                        android:maxLines="1"
                         android:paddingStart="25dp"
                         android:paddingTop="15dp"
                         android:paddingEnd="25dp"
@@ -350,26 +403,44 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="35dp"
+                        android:layout_marginStart="30dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="60dp"
+                        android:layout_marginEnd="40dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Price:"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/price"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/required3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingStart="12dp"
+                            android:text="@string/required"
+                            android:textColor="@color/primary_col"
+                            android:textSize="12sp"
+                            android:textStyle="bold|italic"
+                            tools:ignore="RtlSymmetry" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <EditText
                         android:id="@+id/price_val2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="15dp"
                         android:layout_marginEnd="40dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/edittext_round"
-                        android:hint="Price"
+                        android:hint="@string/price"
                         android:importantForAutofill="no"
                         android:inputType="numberDecimal"
                         android:lineHeight="5dp"
@@ -395,8 +466,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:paddingTop="10dp">
 
                 <Button
                     android:id="@+id/delete_btn"
@@ -412,14 +482,14 @@
                     android:gravity="right|center"
                     android:paddingStart="28dp"
                     android:paddingEnd="25dp"
-                    android:text="DEL"
+                    android:text="@string/del"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />
+                    tools:ignore="RtlHardcoded,RtlSymmetry" />
 
                 <FrameLayout
                     android:id="@+id/save_btn"
@@ -441,16 +511,16 @@
                         android:layout_gravity="center"
                         android:background="@null"
                         android:clickable="false"
-                        android:drawableRight="@drawable/save_28px"
                         android:drawablePadding="10dp"
                         android:focusable="false"
                         android:gravity="center"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
-                        android:text="SAVE"
+                        android:text="@string/save"
                         android:textColor="@color/white"
                         android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        app:drawableRightCompat="@drawable/save_28px" />
                 </FrameLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
