--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -23,13 +23,13 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/web_back_btn"
-                android:layout_width="wrap_content"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
-                android:backgroundTint="@android:color/transparent"
                 android:padding="10dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/left_48px" />
+                app:srcCompat="@drawable/back_page_36px" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,16 +40,6 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
-                android:padding="11dp"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/shopyy_icon" />
-
         </RelativeLayout>
 
         <WebView
