--- a/app/src/main/res/layout/app_bar_dashboard_new.xml
+++ b/app/src/main/res/layout/app_bar_dashboard_new.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ShopyyTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarr"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             app:buttonGravity="center_vertical"
@@ -29,5 +29,6 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_dashboard_new" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
