--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,10 +23,9 @@
 
     <color name="colorPrimaryDark" />
     <color name="colorPrimary" />
+    <color name="colorAccent"/>
 
     <color name="red_border">#f07a62</color>
-    <color name="colorAccent" />
-
 
     <color name="fab_col1">@color/primary_col</color>
     <color name="fab_col2">#11c1f7</color>
@@ -34,6 +33,7 @@
 
     <color name="del_col">#FF3D00</color>
     <color name="temp1">#F9CE22</color>
+    <color name="add_col">#4AD361</color>
 
     <color name="recycleview_bg_col">#F5F5F5</color>
 </resources>
